# Khors

./: .dockerignore  .env.examples  .gitignore  BIBLE.md  Dockerfile  Makefile  README.md  TODO.md  docker-compose.yml  launcher.py  messages_dump.json  pyproject.toml  requirements.txt  test_enable_tools.py  test_file.txt  test_gemini_format.py  test_llm_fix.py  test_llm_post_refactor.py  test_llm_run.py  test_llm_run2.py  test_openai_models.py  test_openai_models2.py  test_registry.py
khors/: __init__.py  agent.py  apply_patch.py  consciousness.py  context.py  llm.py  loop.py  loop_helpers.py  memory.py  owner_inject.py  pricing.py  review.py  system_monitor.py  task_manager.py  temp_edit_script.py  tool_executor.py  utils.py
khors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
khors/news_agent/: README.md  __init__.py  config.yaml  models.py  news_agent.py  news_analyzer.py  news_collector.py  news_scheduler.py  news_sender.py  news_storage.py  run_news_agent.py
khors/news_agent/tests/: __init__.py  test_news_agent.py
khors/tools/: __init__.py  analysis.py  archive_manager.py  browser.py  compact_context.py  control.py  core.py  evolution_stats.py  files.py  git.py  github.py  health.py  knowledge.py  news_agent_tool.py  registry.py  review.py  search.py  shell.py  thinking.py  tool_discovery.py  vision.py  webapi.py
prompts/: CONSCIOUSNESS.md  CONTRACTS.md  SYSTEM.md  WAKEUP.md
reserch/: analiz.sh
reserch/promt/: llm_base.ru.md
reserch/sbor/: pre-commit
reserch/todo/: todo.md
scripts/: test_github_api.py
supervisor/: __init__.py  events.py  git_ops.py  queue.py  state.py  telegram.py  workers.py
tests/: demo_v1.py  test_basic.py  test_environment_setup.py  test_evolution_v4.py  test_file_tools.py  test_launcher_integration.py  test_llm_cleaning.py  test_signatures.py  test_workers_contract.py
(+4 files in other folders)
