[project]
name = "khors"
version = "0.3.0"
description = "Self-creating agent"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "requests",
    "playwright",
    "playwright-stealth",
    "python-dotenv",
    "jsonpath-ng",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["khors*"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
test_patterns = ["test_*.py", "test_*"]

[tool.ruff]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
